2003-11-14  JP Rosevear <jpr@ximian.com>

	* MAINTAINERS: Update

2003-11-11  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (SUBDIRS): remove libversit from the build.

	* configure.in (CERT_UI): change the libraries we link.
	(AC_OUTPUT): remove libversit/Makefile

2003-11-11  JP Rosevear <jpr@ximian.com>

	* configure.in: determine the e-d-s version, version the gettext
	files properly

2003-11-07  Dan Winship  <danw@ximian.com>

	* configure.in (AC_OUTPUT): Remove e-util/ename/Makefile

2003-11-07  JP Rosevear <jpr@ximian.com>

	* configure.in: we don't have to configure the libical subdir now

2003-11-07  JP Rosevear <jpr@ximian.com>

	* configure.in: pull in evolution-data-server stuff and remove
	backends from output

2003-10-31  JP Rosevear <jpr@ximian.com>

	* configure.in: set up vars and rules for versioning the .server
	files

	* Makefile.am's: use rules for versioning .server file, ensure
	built files are removed before disting
	
2003-10-30  Chris Toshok  <toshok@ximian.com>

	* configure.in: (AC_OUTPUT): remove smime/tests for now.

2003-10-30  Chris Toshok  <toshok@ximian.com>

	* configure.in: set enable_smime=yes wherever nss would be
	enabled..  fixes manually specifying the nss libs and enabling the
	smime ui.  Also, add a section for generating the correct SMIME UI
	flags.  gross, but necessary.  it should probably be wrapped in
	with all the other nss library crap.
	(AC_OUTPUT): add smime/tests

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (SUBDIRS): use $SMIME_DIR. instead of explicitly
	including smime.

	* configure.in: add some smime foo - a status message, an
	AM_CONDITIONAL (ENABLE_SMIME)

2003-10-17  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: added a configure check for AI_ADDRCONFIG

2003-10-24  Dan Winship  <danw@ximian.com>

	* libversit/Makefile.am: Change YFLAGS to AM_YFLAGS to stop an
	automake 1.7 warning

2003-10-23  Rodney Dawes  <dobey@ximian.com>
